Remove deprecated toggle ds tag assigment from where possible
Signed-off-by: Marinov Avgustin <Avgustin.Marinov@bosch.com>